--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
     {
       "root": "pages/common",
       "pages": [
+        "order-detail/order-detail",
         "result/result"
       ]
     }
